--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "babylonjs": "^5.13.0",
+    "babylonjs-inspector": "^5.13.3",
+    "babylonjs-loaders": "^5.13.0"
   }
 }
