--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
-  "name": "one-minute-gamejam-7",
-  "version": "0.0.1",
-  "description": "Entry for the one minute game jam #7",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "scripts": {
-    "clean": "rm -rf dist/*",
-    "start": "webpack serve",
-    "build": "clear && npx tsc -b && (tput setaf 2; echo 'build successful :)'; tput sgr0)",
-    "watch": "watch ./src 'npm run build'",
-    "test": "clear && npx ts-node --swc src/test/TEST.ts",
-    "watch-test": "watch ./src 'npm run test'"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "typescript": "^4.3.4",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "css-loader": "^5.2.6",
-    "git-revision-webpack-plugin": "^5.0.0",
-    "html-webpack-plugin": "^5.3.2",
-    "style-loader": "^3.0.0",
-    "terser-webpack-plugin": "^5.1.3",
-    "ts-loader": "^9.2.3",
-    "tsconfig-paths-webpack-plugin": "^3.5.1",
-    "webpack": "^5.53.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^4.2.1",
-    "webpack-node-externals": "^3.0.0"
-  },
-  "dependencies": {
-    "react": "^18.0.0-rc.0",
-    "react-dom": "^18.0.0-rc.0",
-    "react-router-dom": "^6.1.1"
-  }
+    "name": "one-minute-gamejam-7",
+    "version": "0.0.1",
+    "description": "Entry for the one minute game jam #7",
+    "main": "./dist/index.js",
+    "module": "./dist/index.js",
+    "engines": {
+        "node": "16.14.2"
+    },
+    "scripts": {
+        "dev": "next",
+        "build": "next build",
+        "start": "node server.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "MIT",
+    "devDependencies": {
+        "@types/node": "^18.6.2",
+        "@types/react": "^17.0.37",
+        "@types/react-dom": "^17.0.11",
+        "ts-loader": "^9.2.3",
+        "tsconfig-paths-webpack-plugin": "^3.5.1",
+        "typescript": "^4.3.4"
+    },
+    "dependencies": {
+        "@babylonjs/core": "^5.1.0",
+        "babylonjs": "^5.4.0",
+        "cookie-parser": "^1.4.6",
+        "detect-browser": "^5.3.0",
+        "express": "^4.17.3",
+        "gsap": "^3.8.0",
+        "next": "^12.0.4",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "styled-components": "^5.3.3",
+        "styled-normalize": "^8.0.7",
+        "uuid": "^8.3.2",
+        "zustand": "^3.7.2",
+        "zustand-persist": "^0.4.0"
+    }
 }
