--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "@types/node": "^18.6.2",
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
+        "@types/styled-components": "^5.1.25",
+        "babel-plugin-styled-components": "^2.0.7",
         "ts-loader": "^9.2.3",
         "tsconfig-paths-webpack-plugin": "^3.5.1",
         "typescript": "^4.3.4"
