--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "author": "",
     "license": "MIT",
     "devDependencies": {
+        "@types/matter-js": "^0.17.5",
         "@types/color": "^3.0.3",
         "@types/node": "^18.6.2",
         "@types/react": "^17.0.37",
@@ -37,6 +38,7 @@
         "image-js": "^0.33.1",
         "next": "^12.0.4",
         "react": "^17.0.2",
+        "matter-js": "^0.18.0",
         "react-dom": "^17.0.2",
         "random-js": "^2.1.0",
         "styled-components": "^5.3.3",
