--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "cookie-parser": "^1.4.6",
         "detect-browser": "^5.3.0",
         "express": "^4.17.3",
+        "framer-motion": "^6.5.1",
         "gsap": "^3.10.4",
         "image-js": "^0.33.1",
         "matter-js": "^0.18.0",
