--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "react-dom": "^17.0.2",
         "styled-components": "^5.3.3",
         "styled-normalize": "^8.0.7",
+        "tone": "^14.7.77",
         "uuid": "^8.3.2",
         "zustand": "^3.7.2",
         "zustand-persist": "^0.4.0"
