--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "scripts": {
         "dev": "next",
         "build": "next build",
+        "prod": "next build && next export",
         "start": "node server.js"
     },
     "keywords": [],
